fix compatibility with 203.3609
emit 1.8 bytecode for now to get rid of some obscure jvm runtime violations